--- a/main.css
+++ b/main.css
@@ -2,13 +2,13 @@
 @font-face 
 {
     font-family: beaufort;
-    src: url(./fonts/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf);
+    src: url(./assets/fonts/BeaufortForLoL-OTF/BeaufortforLOL-Bold.otf);
 }
 
 @font-face 
 {
     font-family: spiegel;
-    src: url(./fonts/Spiegel-OTF/Spiegel-Bold.otf);
+    src: url(./assets/fonts/Spiegel-OTF/Spiegel-Bold.otf);
 }
 
 /*--------- Configuracion del cursor y estilado general ------------*/
@@ -108,7 +108,7 @@ body
     animation: tracking-in-expand 3.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     padding-bottom: 0px;
     margin-bottom: 4px;
-  }
+}
 
 .separador-lineal-header
 {
@@ -605,4 +605,66 @@ body
   }
 
   
-  
+  /* ============================================ C O N T A C T O (pag) ================================================== */
+  #agradecimiento-contacto
+  {
+      border: 1px solid #c89c3c;
+      border-radius: 18px;
+      text-align: center;
+      color: white;
+      font-size: 20px;
+      background-color: #010a13;
+      opacity: 85%;
+      padding: 1rem;
+      margin-top: 2rem;
+  }
+
+  #informacion-contacto
+  {
+      border: 1px solid #c89c3c;
+      border-radius: 18px;
+      text-align: left;
+      color: white;
+      font-size: 20px;
+      background-color: #010a13;
+      opacity: 85%;
+      padding: 1rem;
+      position: relative;
+      margin-top: 2rem;
+  }
+
+  #input-mail, #input-razon
+  {
+    border: 1px solid #c89c3c;
+    border-radius: 18px;
+    font-size: 20px;
+    width: 100%;
+    height: 3.2rem;
+    background-color: #010a13;
+    opacity: 85%;
+    color: #c89c3c;
+    text-align: center;
+  }
+
+  #input-razon
+  {
+    margin-top: 1.5rem;
+  }
+
+  #btn-enviar, #btn-volver-contacto
+  {
+    border: 1px solid #c89c3c;
+    border-radius: 18px;
+    font-size: 20px;
+    width: 100%;
+    height: 3.2rem;
+    margin-top: 1.5rem;
+    background-color: #010a13;
+    opacity: 85%;
+    color: #c89c3c;
+}
+
+#btn-volver-contacto
+{
+  margin-bottom: 1.5rem;
+}
